part1/1_10/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: generator-reader-svc
spec:
  type: ClusterIP
  selector:
    app: generator-reader
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3001
